# legal-doc-assistant

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/adversarial-verify/: SKILL.md
.claude/skills/backend-run/: SKILL.md
.claude/skills/citation-check/: SKILL.md
.claude/skills/clean-commits/: SKILL.md
.claude/skills/contract-risk/: SKILL.md
.claude/skills/db-inspect/: SKILL.md
.claude/skills/frontend-run/: SKILL.md
.claude/skills/legal-review/: SKILL.md
.claude/skills/owasp-review/: SKILL.md
.claude/skills/rag-eval/: SKILL.md
.claude/skills/secret-scan/: SKILL.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/write-failing-test-first/: SKILL.md
.github/workflows/: ci.yml
api/: agent_tasks.py  dependencies.py  jobs.py  main.py  sse.py  store_helpers.py  task_queue.py
api/middleware/: rate_limit.py
api/routers/: agent.py  chat.py  documents.py  feedback.py  helpers.py  matters.py  memories.py  review.py
api/schemas/: requests.py  responses.py
data/eval/: eval_dataset.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: agent.ts  chat.ts  documents.ts  feedback.ts  health.ts  http.ts  matters.ts  memories.ts  review.ts  types.ts
frontend/src/app/: router.ts
frontend/src/components/: ChatPanel.vue  CitationList.vue  ClauseReviewPanel.vue  ConflictCheckPanel.vue  DocumentUploader.vue  EvidencePanel.vue  IngestJobStatus.vue  MemoryPanel.vue  StatusBadge.vue
frontend/src/config/: runtime.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/pages/: AgentPage.vue  DocumentsPage.vue  MattersPage.vue  ReviewPage.vue  (+2 more)
scripts/: generate_eval_fixtures.py  run_rag_eval.py
src/doc_assistant/: __init__.py  observability.py
tests/: test_agent_api.py  test_agent_service.py  test_agent_tasks.py  test_answer_guard.py  test_api_dependencies.py  test_document_loader.py  test_eval_metrics.py  test_evidence_profile.py  test_ingest_jobs.py  test_language_model_protocols.py  test_matter_store.py  test_memory_service.py  test_qa_service.py  test_review_taxonomy.py  test_settings.py  test_tool_calling_service.py  test_vector_store_ingestion.py  test_web_search.py
(+77 files in other folders)
