[project]
name = "legal-doc-assistant"
version = "0.1.0"
description = "A citation-first RAG assistant for contracts, policies, and compliance documents."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-community>=0.4,<1.0",
    "langchain-chroma>=0.2,<1.0",
    "langchain-text-splitters>=1.0,<2.0",
    "chromadb>=1.0,<2.0",
    "pypdf>=5.0,<7.0",
    "dashscope>=1.20,<2.0",
    "requests>=2.31,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
